# xenesis

./: ChangeLog  Makefile  Makefile.am  Makefile.in  NEWS  README  README.md  TODO  aclocal.m4  autogen.sh  config.status  configure  configure.ac  index.html  libtool  params.json  xenesis.conf.in
autom4te.cache/: output.0  output.2  requests  traces.0  traces.1  traces.2
conf.d/: Makefile.am  Makefile.in  cygwin.conf.in  freebsd.conf.in  hpux.conf.in  log.conf.in  ssh.conf.in
etc/: Makefile  Makefile.am  Makefile.in  xenesis.conf  xenesis.conf.in
etc/conf.d/: Makefile  Makefile.am  Makefile.in  editor.conf  log.conf  log.conf.in  network.conf  network.conf.in  plugins.conf  plugins.conf.in  ssh.conf  ssh.conf.in
etc/os/: Makefile  Makefile.am  Makefile.in  cygwin.conf  default.conf  default.conf.in  freebsd.conf.in  hpux.conf  linux.conf  linux.conf.in
etc/os/commands/: Makefile  Makefile.am  Makefile.in  cygwin.conf  cygwin.conf.in  default.conf  default.conf.in  freebsd.conf  freebsd.conf.in  hpux.conf  hpux.conf.in  linux.conf  linux.conf.in
hosts/: default  demo
m4/: glib-gettext.m4
man/: xenesis.1
plugins/: template.ral
plugins/unixcommon/: uname.ral
po/: ChangeLog  Makevars  POTFILES.in
src/: Makefile  Makefile.am  Makefile.in  libxenesis-debug.c  libxenesis-debug.la  libxenesis-env.c  libxenesis-env.la  libxenesis-log.c  libxenesis-log.la  libxenesis-net.c  libxenesis-net.la  libxenesis-net.so.in  libxenesis-ral.c  libxenesis-ral.la  libxenesis-ral.so.in  libxenesis-ssh.c  libxenesis-ssh.la  libxenesis-ssh.so.in  libxenesis-sshnopass.c  libxenesis-sshnopass.la  libxenesis-sshnopass.so.in  libxenesis.c  libxenesis.la  libxenesis.so.in  xenesis  xenesis.c  xenesis.h.in  xenesis.in
